@@ -38,6 +38,9 @@
 
 (setq bug-numbered-tests
       (list
+       'py-underscore-word-syntax-p-customization-has-no-effect-lp-1100947-test
+       'py-up-test-python-el-111-test
+       'py-down-python-el-112-test
        'enter-key-does-not-indent-properly-after-return-statement-lp-1098793-test
        'filename-completion-fails-in-ipython-lp-1027265-n1-test
        'filename-completion-fails-in-ipython-lp-1027265-n2-test
@@ -4835,11 +4838,11 @@ def foo():
 # -\*- coding: utf-8 -\*-
 # up-list: Scan error: \"Unbalanced parentheses\"
 # Hi, when I press C-M-u in python buffer I get:
-# 
+#
 # up-list: Scan error: \"Unbalanced parentheses\"
 
 # My expected behavior is something like this:
-# 
+#
 # Scenario: Going higher level by C-M-u
 #     When I insert:
 
@@ -4856,7 +4859,7 @@ def foo():
 #     Then I should looking at \"if True\"
 #     And I press C-M-u
 #     Then I should looking at \"def f\"
-# 
+#
 # related: #106
 
 def f():
@@ -4867,17 +4870,17 @@ def f():
   (py-bug-tests-intern 'py-up-test-python-el-111-base arg teststring)))
 
 (defun py-up-test-python-el-111-base ()
-    (goto-char 760)
-    (assert (eq 759 (py-up)) nil "py-up-test-python-el-111-test #1 failed")
-    (assert (eq 742 (py-up)) nil "py-up-test-python-el-111-test #2 failed")
-    (assert (eq 741 (py-up)) nil "py-up-test-python-el-111-test #3 failed")
-    (assert (eq 709 (py-up)) nil "py-up-test-python-el-111-test #4 failed")
-    (assert (eq 704 (py-up)) nil "py-up-test-python-el-111-test #5 failed")
-    (assert (eq 687 (py-up)) nil "py-up-test-python-el-111-test #6 failed")
-    (assert (eq 674 (py-up)) nil "py-up-test-python-el-111-test #7 failed")
-    (goto-char 729)
-    (assert (eq 710 (py-up)) nil "py-up-test-python-el-111-test #7 failed")
-    (assert (eq 709 (py-up)) nil "py-up-test-python-el-111-test #7 failed")
+    (goto-char 757)
+    (assert (eq 756 (py-up)) nil "py-up-test-python-el-111-test #1 failed")
+    (assert (eq 739 (py-up)) nil "py-up-test-python-el-111-test #2 failed")
+    (assert (eq 738 (py-up)) nil "py-up-test-python-el-111-test #3 failed")
+    (assert (eq 706 (py-up)) nil "py-up-test-python-el-111-test #4 failed")
+    (assert (eq 701 (py-up)) nil "py-up-test-python-el-111-test #5 failed")
+    (assert (eq 684 (py-up)) nil "py-up-test-python-el-111-test #6 failed")
+    (assert (eq 671 (py-up)) nil "py-up-test-python-el-111-test #7 failed")
+    (goto-char 726)
+    (assert (eq 707 (py-up)) nil "py-up-test-python-el-111-test #8 failed")
+    (assert (eq 706 (py-up)) nil "py-up-test-python-el-111-test #9 failed")
     )
 
 
@@ -4921,6 +4924,24 @@ class C(object):
     (assert (eq 196 (py-down)) nil "py-down-test-python-el-112-test #5 failed")
 )
 
+
+(defun py-underscore-word-syntax-p-customization-has-no-effect-lp-1100947-test (&optional arg)
+  (interactive "p")
+  (let ((teststring "#! /usr/bin/env python
+# -*- coding: utf-8 -*-
+_
+"))
+  (py-bug-tests-intern 'py-underscore-word-syntax-p-customization-has-no-effect-lp-1100947-base arg teststring)))
+
+(defun py-underscore-word-syntax-p-customization-has-no-effect-lp-1100947-base ()
+  (goto-char 48)
+  (py-underscore-word-syntax-p-on)
+  (assert (eq 119 (char-syntax (char-after))) nil "py-underscore-word-syntax-p-customization-has-no-effect-lp-1100947-test #1 failed")
+  (py-underscore-word-syntax-p-off)
+  (assert (eq 95 (char-syntax (char-after))) nil "py-underscore-word-syntax-p-customization-has-no-effect-lp-1100947-test #2 failed")
+  (py-underscore-word-syntax-p-on)
+  (assert (eq 119 (char-syntax (char-after))) nil "py-underscore-word-syntax-p-customization-has-no-effect-lp-1100947-test #3 failed")
+)
 
 (provide 'py-bug-numbered-tests)
 ;;; py-bug-numbered-tests.el ends here
